@@ -1,8 +1,6 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.oauth2.clientauthentication.ClientAuthentication;
-import com.github.scribejava.core.oauth2.clientauthentication.RequestBodyAuthenticationScheme;
 
 /**
  * OAuth2 API for HiOrg-Server
@@ -43,10 +41,4 @@ public class HiOrgServerApi20 extends DefaultApi20 {
     protected String getAuthorizationBaseUrl() {
         return "https://www.hiorg-server.de/api/oauth2/" + version + "/authorize.php";
     }
-
-    @Override
-    public ClientAuthentication getClientAuthentication() {
-        return RequestBodyAuthenticationScheme.instance();
-    }
-
 }
