@@ -6,6 +6,7 @@
  * add RuntimeException processing in async http clients (delivered to onError callbacks) (thanks to https://github.com/jochen314)
  * check 200 status code from response in OAuth2AccessTokenExtractor (thanks to https://github.com/jochen314)
  * fix case sensitive Http Headers comparison and sending Content-Type header along with content-type (thanks to https://github.com/marnix)
+ * add HiOrg-Server (https://www.hiorg-server.de/) API (thanks to https://github.com/MartinBoehmer)
 
 [5.5.0]
  * fix error parsing for Fitbit (thanks to https://github.com/danmana)
